--- a/rc.conf
+++ b/rc.conf
@@ -494,10 +494,10 @@ map yn yank name
 map y. yank name_without_extension
 
 # Filesystem Operations
-map = chmod
+map + chmod
 
 map <C-f> fzf_select
-#map <CR> toggleVCS
+map <C-t> toggleVCS
 map M console mkcd%space
 map C console compress%space
 map X console extracthere%space
