--- a/rc.conf
+++ b/rc.conf
@@ -461,28 +461,30 @@ map gfr cd ~/.config/ranger
 map gfb cd ~/.config/bin
 map gfn cd ~/.config/nvim
 map gfz cd ~/.config/zsh
+map gfl cd ~/.config/lazygit
 map gfd cd ~/prog/dwm
 map gfs cd ~/prog/st
-map ge cd /etc
+map gs  cd ~/scripts
+map ge  cd /etc
 map guu cd /usr
 map gub cd /usr/bin
 map gul cd /usr/local
 map gus cd /usr/share
 map guf cd /usr/share/fonts
 map gud cd /usr/share/doc
-map gl cd -r .
-map gL cd -r %f
-map go cd /opt
-map gv cd /var
-map gm cd /media
-map gi eval fm.cd('/run/media/' + os.getenv('USER'))
-map gM cd /mnt
-map gs cd /srv
-map gp cd /tmp
-map gr cd /
-map gR eval fm.cd(ranger.RANGERDIR)
-map g/ cd /
-map g? cd /usr/share/doc/ranger
+map gl  cd -r .
+map gL  cd -r %f
+map go  cd /opt
+map gv  cd /var
+map gm  cd /media
+map gi  eval fm.cd('/run/media/' + os.getenv('USER'))
+map gM  cd /mnt
+map gs  cd /srv
+map gp  cd /tmp
+map gr  cd /
+map gR  eval fm.cd(ranger.RANGERDIR)
+map g/  cd /
+map g?  cd /usr/share/doc/ranger
 
 # External Programs
 map E  edit
@@ -495,6 +497,10 @@ map y. yank name_without_extension
 
 # Filesystem Operations
 map + chmod
+
+# Open lazygit
+map <C-g> shell lazygit
+#map <C-n> shell lazynpm
 
 map <C-f> fzf_select
 map <C-t> toggleVCS
