--- a/rc.conf
+++ b/rc.conf
@@ -472,6 +472,8 @@ map gul cd /usr/local
 map gus cd /usr/share
 map guf cd /usr/share/fonts
 map gud cd /usr/share/doc
+map gp  cd ~/prog
+map gw  cd ~/my-wallpapers
 map gl  cd -r .
 map gL  cd -r %f
 map go  cd /opt
@@ -479,7 +481,7 @@ map gv  cd /var
 map gm  cd /media
 map gi  eval fm.cd('/run/media/' + os.getenv('USER'))
 map gM  cd /mnt
-map gp  cd /tmp
+map gt  cd /tmp
 map gr  cd /
 map gR  eval fm.cd(ranger.RANGERDIR)
 map g/  cd /
