add 'gfz' and 'gft'

--- a/rc.conf
+++ b/rc.conf
@@ -372,7 +372,6 @@ map ? help
 map W display_log
 map w taskview_open
 map S shell $SHELL
-map <CR> shell $SHELL
 
 map !  console shell%space
 map @  console -p6 shell  %%s
@@ -426,7 +425,7 @@ map <HOME>     move to=0
 map <END>      move to=-1
 map <PAGEDOWN> move down=1   pages=True
 map <PAGEUP>   move up=1     pages=True
-#map <CR>       move right=1
+map <CR>       move right=1
 map <DELETE>   console delete
 map <INSERT>   console touch%space
 
@@ -462,6 +461,8 @@ map gfb cd ~/.config/bin
 map gfn cd ~/.config/nvim
 map gfz cd ~/.config/zsh
 map gfl cd ~/.config/lazygit
+map gfz cd ~/.config/zsh
+map gft cd ~/.config/tmux
 map gfd cd ~/prog/dwm
 map gfs cd ~/prog/st
 map gs  cd ~/scripts
